barre de recherche

--- a/INDEX.html
+++ b/INDEX.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Booki</title>
-        <link href="style2.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <header>
@@ -25,7 +25,17 @@
     </header>
 
     <body>
+    <!-- barre de recherche -->
 
+    <div class="search">
+        <button type="submit" class="searchPosition" placeholder="Rechercher"> <img src="https://e7.pngegg.com/pngimages/325/237/png-clipart-map-location-map-logo-symbol.png" height="14px" width="18px" alt="icone position" />
+            </button>
+        <input type="text" class="searchBar" placeholder="Marseille, France">
+        <button type="submit" class="searchButton" placeholder="Rechercher">Rechercher
+        </button>
+    </div>
+<br>
+<p>+ de 500 logements disponibles dans cette ville.</p>
 
 
     </body>
