--- a/INDEX.html
+++ b/INDEX.html
@@ -37,6 +37,14 @@
 <br>
 <p>+ de 500 logements disponibles dans cette ville.</p>
 
-
+    <!-- filtres -->
+    <div class="filtersFlex">
+        <h2>Filtres</h2>
+        <div class="filtersBubble">Economique</div>
+        <div class="filtersBubble">Familial</div>
+        <div class="filtersBubble">Romantique</div>
+        <div class="filtersBubble">Animaux autorisés</div>
+    </div>
+    
     </body>
 </html>
