grid Marseille + populaire + activités

--- a/INDEX.html
+++ b/INDEX.html
@@ -45,6 +45,31 @@
         <div class="filtersBubble">Romantique</div>
         <div class="filtersBubble">Animaux autorisés</div>
     </div>
-    
+
+    <!-- marseille + populaires -->
+
+    <div class="bande">
+        <div class="blocMarseille">
+
+
+
+        </div>
+        <div class="blocPopulaire">
+
+        </div>
+
+    </div>
+
+    <!-- activitées -->
+
+    <div class="blocAct">
+
+
+          </div>
+
+    </div>
+
+
+
     </body>
 </html>
