--- a/INDEX.html
+++ b/INDEX.html
@@ -50,8 +50,59 @@
 
     <div class="bande">
         <div class="blocMarseille">
+            <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                  <b>Auberge la Canebière</b><br>
+                  Nuit à partir de 25€<br>
+                  img étoiles
+                </div>
+              </div>
 
+              <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                    <b>Hôtel du Port</b><br>
+                  Nuit à partir de 52€<br>
+                  img étoiles
+                </div>
+              </div>
 
+              <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                    <b>Hôtel les mouettes</b><br>
+                  Nuit à partir de 76€<br>
+                  img étoiles
+                </div>
+              </div>
+
+              <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                    <b>Hôtel de la mer</b><br>
+                  Nuit à partir de 46€<br>
+                  img étoiles
+                </div>
+
+              </div>
+              <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                    <b>Auberge Le Panier</b><br>
+                  Nuit à partir de 23€<br>
+                  img étoiles
+                </div>
+              </div>
+
+              <div class="cardMarseille">
+                <img src="assets\hebergements\1_xlarge\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar" />
+                <div class="containerMarseille">
+                    <b>Hôtel Chez Amina</b><br>
+                  Nuit à partir de 96€<br>
+                  img étoiles
+                </div>
+              </div>
 
         </div>
         <div class="blocPopulaire">
