--- a/INDEX.html
+++ b/INDEX.html
@@ -115,6 +115,33 @@
 
     <div class="blocAct">
 
+        <div class="cardAct">
+            <img src="assets/activites/1_xlarge/vieuxport.jpg" alt="Avatar" />
+            <div class="containerAct">
+              Vieux-Port
+            </div>
+          </div>
+
+          <div class="cardAct">
+            <img src="assets\activites\1_xlarge\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar" />
+            <div class="containerAct">
+              Fort de Pomègues
+            </div>
+          </div>
+
+          <div class="cardAct">
+            <img src="assets\activites\1_xlarge\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar" />
+            <div class="containerAct">
+              Parc national des Calanques
+            </div>
+          </div>
+
+          <div class="cardAct">
+            <img src="assets\activites\1_xlarge\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar" />
+            <div class="containerAct">
+              Notre-Dame-de-la-Garde
+            </div>
+          </div>
 
           </div>
 
