--- a/INDEX.html
+++ b/INDEX.html
@@ -107,6 +107,33 @@
         </div>
         <div class="blocPopulaire">
 
+            <div class="cardPop">
+                <img src="assets\hebergements\1_xlarge\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar" />
+                <div class="containerPop">
+                  <b>Hôtel Le soleil du matin</b><br>
+                  Nuit à partir de 128€<br>
+                  img étoiles
+                </div>
+              </div>
+
+              <div class="cardPop">
+                <img src="assets\hebergements\1_xlarge\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar" />
+                <div class="containerPop">
+                    <b>Chambres d'hôtes Au coeur de l'eau</b><br>
+                    Nuit à partir de 71€<br>
+                    img étoiles
+                </div>
+              </div>
+
+              <div class="cardPop">
+                <img src="assets\hebergements\1_xlarge\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar" />
+                <div class="containerPop">
+                    <b>Hôtel Bleu et Blanc</b><br>
+                    Nuit à partir de 68€<br>
+                    img étoiles
+                </div>
+              </div>
+
         </div>
 
     </div>
