--- a/INDEX.html
+++ b/INDEX.html
@@ -174,7 +174,30 @@
 
     </div>
 
+<footer>
+    <div class="gridFooter">
+        
+    <div class="blocFooter">
+        <b>A propos</b><br>
+        Fonctionnement du site<br>
+        Conditions générales<br>
+        Données et confidentialité
+    </div>
 
+    <div class="blocFooter">
+        <b>Nos hébergements</b><br>
+        Charte qualité<br>
+        Proposer votre hôtel
+    </div>
+
+    <div class="blocFooter">
+        <b>Assistance</b><br>
+        Centre d’aide<br>
+        Nous contacter
+    </div>
+
+  </div>
+</footer>
 
     </body>
 </html>
