--- a/INDEX.html
+++ b/INDEX.html
@@ -114,7 +114,12 @@
         </div>
         <div class="blocPopulaire">
 
-          <h2>Les plus populaires <i class="fa-solid fa-chart-line fa-sm" style="color:#0065FC;"></i></h2>
+          <div class="wrapPopTitle">
+            <div class="leftBoxPop"><h2>Les plus populaires</h2></div>
+            <div class="rightBoxPop"><i class="fa-solid fa-chart-line fa-sm" style="color:#0065FC;"></i></div>
+          </div>
+
+
 
             <a href="#"><div class="cardPop">
                 <img src="assets\hebergements\1_xlarge\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar" />
